fixed terminal overflow

--- a/frontend/src/styles/Cockpit.module.css
+++ b/frontend/src/styles/Cockpit.module.css
@@ -35,14 +35,15 @@
 }
 
 .terminal {
-    background-color: var(--var5);
+    background-color: var(--var1);
     border: 1px solid var(--var4);
     width: 100%;
     height: 400px;
     max-width: 1000px;
     border-radius: 8px;
     box-shadow: 10px 10px 10px var(--var3);
-    overflow: hidden;
+    padding-bottom: 2em;
+    margin-bottom: 3em;
 }
 
 
